Move to junit5 and jpms